--- a/Idle Factory/HUD/HUD Actions Scenes/GameShopScene/GameShopScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameShopScene/GameShopScene.storyboard
@@ -166,36 +166,44 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="FUv-rU-gcX">
                                                             <rect key="frame" x="25" y="123" width="81" height="15"/>
                                                             <subviews>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5b-vw-rb3">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="9.5" height="15"/>
+                                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                </view>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4k.tv" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bUI-h4-UC6">
-                                                                    <rect key="frame" x="0.0" y="0.5" width="12.5" height="14"/>
+                                                                    <rect key="frame" x="10.5" y="0.5" width="9" height="14"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfW-sl-C6q">
-                                                                    <rect key="frame" x="13.5" y="3.5" width="13" height="8.5"/>
+                                                                    <rect key="frame" x="20.5" y="3.5" width="9.5" height="8.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="7"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="airpods" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zzB-JF-hZh">
-                                                                    <rect key="frame" x="27.5" y="0.5" width="12.5" height="13.5"/>
+                                                                    <rect key="frame" x="31" y="0.5" width="9" height="13.5"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wYZ-0W-zHK">
-                                                                    <rect key="frame" x="41" y="3.5" width="12.5" height="8.5"/>
+                                                                    <rect key="frame" x="41" y="3.5" width="9.5" height="8.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="7"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tv" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="CID-my-hnn">
-                                                                    <rect key="frame" x="54.5" y="0.5" width="13" height="14"/>
+                                                                    <rect key="frame" x="51.5" y="0.5" width="9" height="14"/>
                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="id" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mPP-aW-Nx9">
-                                                                    <rect key="frame" x="68.5" y="3.5" width="12.5" height="8.5"/>
+                                                                    <rect key="frame" x="61.5" y="3.5" width="9.5" height="8.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="7"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yfv-Ce-Qr2">
+                                                                    <rect key="frame" x="72" y="0.0" width="9" height="15"/>
+                                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                </view>
                                                             </subviews>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="15" id="Qse-HX-mgh"/>
@@ -269,6 +277,7 @@
                                             <outlet property="SKView" destination="tlx-zL-UGs" id="zO2-hL-QPf"/>
                                             <outlet property="cardView" destination="Wwu-mR-IIJ" id="yoj-aH-Smt"/>
                                             <outlet property="coinImage" destination="rLh-s4-yYu" id="Zz4-fF-mae"/>
+                                            <outlet property="leftMargin" destination="L5b-vw-rb3" id="9Jw-t8-REU"/>
                                             <outlet property="priceLabel" destination="XDh-yI-08t" id="r4Y-Ke-g9e"/>
                                             <outlet property="resourceQuantityType1" destination="sfW-sl-C6q" id="PJH-gM-xcZ"/>
                                             <outlet property="resourceQuantityType2" destination="wYZ-0W-zHK" id="tNf-Up-ZSa"/>
@@ -276,6 +285,7 @@
                                             <outlet property="resourceType1" destination="bUI-h4-UC6" id="8gZ-Cl-yKl"/>
                                             <outlet property="resourceType2" destination="zzB-JF-hZh" id="HpL-Nk-EvM"/>
                                             <outlet property="resourceType3" destination="CID-my-hnn" id="wNa-2p-x0X"/>
+                                            <outlet property="rightMargin" destination="Yfv-Ce-Qr2" id="sgV-03-3V3"/>
                                             <outlet property="seeMoreButton" destination="uEp-PC-Qyk" id="rfH-nd-bcI"/>
                                         </connections>
                                     </collectionViewCell>
