--- a/Idle Factory/UpgradeFactory/UpgradeFactoryScene.storyboard
+++ b/Idle Factory/UpgradeFactory/UpgradeFactoryScene.storyboard
@@ -47,12 +47,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="MI5-wc-PBN">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="41"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="70" height="41"/>
                                                     <subviews>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sTj-xf-eYq">
-                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="25"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="70" height="25"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="25" id="VIJ-Nb-GBZ"/>
+                                                                <constraint firstAttribute="width" constant="70" id="bhO-D9-lxH"/>
                                                             </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -63,16 +64,16 @@
                                                             </connections>
                                                         </button>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="hx3-vd-l2e">
-                                                            <rect key="frame" x="0.0" y="29" width="100" height="12"/>
+                                                            <rect key="frame" x="0.0" y="29" width="70" height="12"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="K8L-3D-SSh">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="12"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="35" height="12"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="12" id="jji-TA-YZf"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wYx-1V-vYh">
-                                                                    <rect key="frame" x="50" y="0.0" width="50" height="12"/>
+                                                                    <rect key="frame" x="35" y="0.0" width="35" height="12"/>
                                                                     <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="12"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -82,27 +83,28 @@
                                                     </subviews>
                                                 </stackView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1e8-yy-fxZ">
-                                                    <rect key="frame" x="116" y="9" width="20" height="20"/>
+                                                    <rect key="frame" x="86" y="9" width="20" height="20"/>
+                                                    <color key="tintColor" systemColor="labelColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="Ksx-v0-ymI"/>
                                                         <constraint firstAttribute="width" constant="20" id="WJF-4v-RTF"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H08-tj-qib">
-                                                    <rect key="frame" x="147" y="12" width="34.5" height="14"/>
+                                                    <rect key="frame" x="117" y="12" width="34.5" height="14"/>
                                                     <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="8t2-sx-VcU">
-                                                    <rect key="frame" x="192.5" y="13" width="16" height="12"/>
+                                                    <rect key="frame" x="162.5" y="13" width="16" height="12"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="16" id="Dkl-la-yZ3"/>
                                                         <constraint firstAttribute="height" constant="12" id="Ydm-t4-WOA"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hfe-xt-dEg">
-                                                    <rect key="frame" x="210.5" y="13" width="29.5" height="12"/>
+                                                    <rect key="frame" x="180.5" y="13" width="29.5" height="12"/>
                                                     <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -207,7 +209,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Coin" width="50" height="43"/>
+        <image name="Coin" width="26" height="18"/>
         <image name="close" width="31.5" height="31"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
