--- a/Idle Factory/HUD/HUD Actions Scenes/GameSettingsScene/Settings.storyboard
+++ b/Idle Factory/HUD/HUD Actions Scenes/GameSettingsScene/Settings.storyboard
@@ -24,16 +24,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="or0-wz-3Tg">
-                                <rect key="frame" x="393" y="46" width="140" height="34"/>
+                                <rect key="frame" x="413.33333333333331" y="46" width="99.333333333333314" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="u6w-rY-Fce"/>
-                                    <constraint firstAttribute="width" constant="140" id="xgt-76-7Qt"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="28"/>
+                                <fontDescription key="fontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="27"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Sound effects" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQ9-ke-i0M">
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Sound effects" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zQ9-ke-i0M">
                                 <rect key="frame" x="302" y="191.66666666666666" width="149" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="WBA-eP-4Mc"/>
@@ -51,9 +50,9 @@
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Reset personal informations"/>
+                                <state key="normal" title="Reset"/>
                                 <connections>
-                                    <action selector="resetButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="pEr-NZ-QlB"/>
+                                    <action selector="resetPersonalInformation:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="a1q-sf-rCX"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KnC-Ee-mTq">
@@ -66,7 +65,7 @@
                                 <state key="normal" image="close"/>
                                 <buttonConfiguration key="configuration" style="plain" image="close2"/>
                                 <connections>
-                                    <action selector="closeButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="2mj-Mc-JlZ"/>
+                                    <action selector="closeSettings:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="L6W-6u-9mL"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Snm-Vq-bmJ">
@@ -77,7 +76,7 @@
                                     <constraint firstAttribute="width" constant="24" id="cUl-Sy-Ngf"/>
                                 </constraints>
                             </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="yZK-mR-B1Q">
+                            <segmentedControl hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="yZK-mR-B1Q">
                                 <rect key="frame" x="475" y="188" width="77" height="32"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -184,9 +183,10 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="nameLabel" destination="vv4-ZD-Maa" id="uYY-GZ-2FH"/>
-                        <outlet property="nameUserLabel" destination="puP-rd-BQ9" id="TRc-Mb-Kz0"/>
+                        <outlet property="nameLabel" destination="8Q4-dW-JJl" id="cMU-PS-ARJ"/>
+                        <outlet property="playerNameLabel" destination="vv4-ZD-Maa" id="hcW-uz-rXy"/>
                         <outlet property="resetButton" destination="ClK-au-9Sw" id="fWx-Y0-I5H"/>
+                        <outlet property="settingsHeader" destination="or0-wz-3Tg" id="dCF-yR-WBa"/>
                         <outlet property="songLabel" destination="aAX-H7-jZG" id="KWr-Qa-Poh"/>
                         <outlet property="soundEffectsLabel" destination="zQ9-ke-i0M" id="qbJ-0b-h2w"/>
                     </connections>
@@ -206,8 +206,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="20W-1l-InT">
                                 <rect key="frame" x="104.33333333333331" y="43.333333333333343" width="717.33333333333348" height="320.33333333333326"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="center" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="bLn-Xc-Oxt">
-                                        <rect key="frame" x="227" y="80" width="264" height="178"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="bLn-Xc-Oxt">
+                                        <rect key="frame" x="226.66666666666669" y="71.333333333333343" width="264" height="178"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Limpar os dados pessoais vai alterar o seu nome de usuário, deseja continuar?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJ5-5k-21F">
                                                 <rect key="frame" x="0.0" y="0.0" width="264" height="126"/>
@@ -219,7 +219,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="I7k-BZ-fdD">
-                                                <rect key="frame" x="25.666666666666686" y="154.00000000000003" width="213" height="24"/>
+                                                <rect key="frame" x="25.666666666666686" y="154" width="213" height="24"/>
                                                 <subviews>
                                                     <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me1-48-ffL">
                                                         <rect key="frame" x="0.0" y="0.0" width="100" height="24"/>
@@ -233,7 +233,7 @@
                                                             <fontDescription key="titleFontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="10"/>
                                                         </buttonConfiguration>
                                                         <connections>
-                                                            <action selector="cancelButton:" destination="B7o-rD-iEA" eventType="touchUpInside" id="wmQ-9u-WZO"/>
+                                                            <action selector="cancelReset:" destination="B7o-rD-iEA" eventType="touchUpInside" id="ZHz-DP-QRU"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vqO-UI-cS3">
@@ -248,7 +248,7 @@
                                                             <fontDescription key="titleFontDescription" name="AustralSlabBlur-Regular" family="Austral Slab" pointSize="10"/>
                                                         </buttonConfiguration>
                                                         <connections>
-                                                            <action selector="confirmResetButton:" destination="B7o-rD-iEA" eventType="touchUpInside" id="aIc-Hf-o3O"/>
+                                                            <action selector="confirmReset:" destination="B7o-rD-iEA" eventType="touchUpInside" id="vDz-8u-ksX"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -261,7 +261,7 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="hJ5-5k-21F" firstAttribute="centerY" secondItem="20W-1l-InT" secondAttribute="centerY" id="2qW-1d-SEg"/>
+                                    <constraint firstItem="bLn-Xc-Oxt" firstAttribute="centerY" secondItem="20W-1l-InT" secondAttribute="centerY" id="KhK-Hd-oA1"/>
                                     <constraint firstItem="hJ5-5k-21F" firstAttribute="centerX" secondItem="20W-1l-InT" secondAttribute="centerX" id="SYQ-F0-fn7"/>
                                 </constraints>
                             </view>
@@ -276,10 +276,10 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="backgroundView" destination="20W-1l-InT" id="TuP-HT-ciz"/>
-                        <outlet property="cancelButton" destination="Me1-48-ffL" id="XK1-QU-C74"/>
-                        <outlet property="confirmButton" destination="vqO-UI-cS3" id="BCy-KQ-5OD"/>
-                        <outlet property="confirmResetLabel" destination="hJ5-5k-21F" id="zLl-VQ-HeL"/>
+                        <outlet property="backgroundView" destination="20W-1l-InT" id="KUG-4t-Jjk"/>
+                        <outlet property="cancelResetButton" destination="Me1-48-ffL" id="3kM-vE-A4J"/>
+                        <outlet property="confirmResetButton" destination="vqO-UI-cS3" id="bTi-o9-kpe"/>
+                        <outlet property="confirmResetQuestionLabel" destination="hJ5-5k-21F" id="S9A-ue-z2O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kTh-vW-EUo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
